--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -19,6 +19,7 @@
 
   &--dark-theme {
     color: var(--secondary-title-color);
+    z-index: 2;
   }
 }
 
