--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -47,5 +47,6 @@
   &.is-open {
     visibility: visible;
     opacity: 1;
+    z-index: 1;
   }
 }
